# body-vision

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: graphql_endpoint.py  predict.py
backend/app/core/: broker.py  config.py  database.py
backend/app/graphql/: __init__.py  queries.py  schema.py  types.py
backend/migrations/: env.py
backend/migrations/versions/: 5eea10b5f0bc_initial_database_schema_with_users_.py
backend/tests/: test_graphql.py  test_main.py  test_predict.py
docs/: ARCHITECTURE-DESIGN.md  CODE-BEST-PRACTICE.md  GRAPHQL-EXAMPLES.md  README.md  REDIS-SETUP.md  ROADMAP-TRACKER.md
inference/app/: __init__.py
inference/app/tasks/: __init__.py  body_analysis.py
scripts/: init.sh  start_worker.sh  test_api.py  test_graphql.py
