[project]
name = "body-vision"
version = "0.1.0"
description = "Sistema full-stack per la stima della composizione corporea tramite analisi di immagini"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "strawberry-graphql==0.284.1",
    "httpx==0.27.2",

    # Database & ORM
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "aiosqlite==0.20.0",
    "greenlet==3.2.4",

    # Supabase Integration
    "supabase==2.11.0",

    # Background Jobs
    "dramatiq[redis]==1.17.0",
    "redis==5.2.1",

    # Configuration & Validation
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",

    # Machine Learning
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy<2.0.0",
    "opencv-python==4.10.0.84",
    "pillow==11.0.0",
    "mediapipe==0.10.20",
    "trimesh==4.5.3",

    # Utilities
    "loguru==0.7.3",
    "python-multipart==0.0.20",
    "typer==0.15.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.8.4",
    "mypy==1.14.0",
    "pre-commit==4.0.1",
    "ipython==8.30.0",
    "ipdb==0.13.13",
]

test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "faker==33.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dramatiq.*",
    "mediapipe.*",
    "trimesh.*",
    "supabase.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "inference/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=backend",
    "--cov=inference",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "inference"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
